feat(setup_*.py): added langgraph and web search tools setup

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,11 @@
-# Placeholder file to preserve directory.
+# Langchain credentials.
+LANGSMITH_API_KEY=
+
+# OpenAI credentials.
+OPENAI_API_KEY=
+OPENAI_LITE_MODEL_ID=
+OPENAI_REGULAR_MODEL_ID=
+
+# Pinecone credentials.
+PINECONE_API_KEY=
+PINECONE_INDEX_NAME=
