--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,8 @@ dependencies = [
   "pinecone (>=5.4.2,<6.0.0)",
   "langgraph (>=0.2.70,<0.3.0)",
   "langsmith (>=0.3.8,<0.4.0)",
-  "duckduckgo-search (>=7.3.2,<8.0.0)"
+  "duckduckgo-search (>=7.3.2,<8.0.0)",
+  "pydantic (>=2.10.6,<3.0.0)"
 ]
 
 [project.urls]
