feat(setup_weatherapi.py): added weather search
use httpx with weatherapi (requires api key) to conditionally search for accurate weather info alongside base web search

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,7 @@
 # Langchain credentials.
+LANGSMITH_TRACING=
+LANGSMITH_ENDPOINT=
+LANGSMITH_PROJECT=
 LANGSMITH_API_KEY=
 
 # OpenAI credentials.
@@ -9,3 +12,6 @@ OPENAI_REGULAR_MODEL_ID=
 # Pinecone credentials.
 PINECONE_API_KEY=
 PINECONE_INDEX_NAME=
+
+# WeatherAPI credentials.
+WEATHERAPI_API_KEY=
