--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,11 @@ requires-poetry = ">2.0"
 [tool.poetry.group.dev.dependencies]
 watchdog = "^6.0.0"
 
+
+[tool.poetry.group.test.dependencies]
+pytest = "^8.3.4"
+pytest-mock = "^3.14.0"
+
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
