--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,8 @@ dependencies = [
   "langsmith (>=0.3.8,<0.4.0)",
   "duckduckgo-search (>=7.3.2,<8.0.0)",
   "pydantic (>=2.10.6,<3.0.0)",
-  "httpx (>=0.28.1,<0.29.0)"
+  "httpx (>=0.28.1,<0.29.0)",
+  "pyarrow (==19.0.0)" # Error in 19.0.1: Unable to find installation candidates
 ]
 
 [project.urls]
