--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,20 @@
-# Langchain credentials.
+# Groq credentials
+GROQ_API_KEY=
+
+# Langchain credentials
 LANGSMITH_TRACING=
 LANGSMITH_ENDPOINT=
 LANGSMITH_PROJECT=
 LANGSMITH_API_KEY=
 
-# OpenAI credentials.
+# OpenAI credentials
 OPENAI_API_KEY=
 OPENAI_LITE_MODEL_ID=
 OPENAI_REGULAR_MODEL_ID=
 
-# Pinecone credentials.
+# Pinecone credentials
 PINECONE_API_KEY=
 PINECONE_INDEX_NAME=
 
-# WeatherAPI credentials.
+# WeatherAPI credentials
 WEATHERAPI_API_KEY=
