feat(prompts/): impelemented multi-task web search rag
further improved project structure, made chain llms swap-able, improved summarizer prompt to admit missing information to avoid hullucination

--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,12 @@ LANGSMITH_API_KEY=
 OPENAI_API_KEY=
 OPENAI_LITE_MODEL_ID=
 OPENAI_REGULAR_MODEL_ID=
+OPENAI_PREMIUM_MODEL_ID=
+
+# Anthropic credentials
+ANTHROPIC_API_KEY=
+ANTHROPIC_LITE_MODEL_ID=
+ANTHROPIC_REGULAR_MODEL_ID=
 
 # Pinecone credentials
 PINECONE_API_KEY=
