--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,8 @@ dependencies = [
   "pydantic (>=2.10.6,<3.0.0)",
   "httpx (>=0.28.1,<0.29.0)",
   "pyarrow (==19.0.0)", # Error in 19.0.1: Unable to find installation candidates
-  "langchain-groq (>=0.2.4,<0.3.0)"
+  "langchain-groq (>=0.2.4,<0.3.0)",
+  "langchain-anthropic (>=0.3.7,<0.4.0)"
 ]
 
 [project.urls]
